# oemer-ng

./: .gitignore  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  config.yaml  pyproject.toml  quickstart.py  test.py
.github/workflows/: ci.yml
examples/: basic_inference.py  export_model.py  train_model.py  train_stage2.py
scripts/: benchmark_inference.py  create_sample_data.py  evaluate_model.py
src/oemer_ng/: __init__.py
src/oemer_ng/export/: __init__.py  ggml_exporter.py
src/oemer_ng/inference/: __init__.py  pipeline.py
src/oemer_ng/models/: __init__.py  omr_model.py
src/oemer_ng/quantization/: __init__.py  quantizer.py
src/oemer_ng/training/: __init__.py  dataset.py  loss.py  trainer.py
src/oemer_ng/utils/: __init__.py  preprocessing.py
tests/: test_deep_scores_dataset.py  test_loss.py  test_model.py  test_note_staff_visualization.py  test_pipeline.py  test_preprocessing.py  test_sequential_processing.py  test_training_script_defaults.py
